# Database-Design-Project

./: .env  README.md  custom_enums.py  db_creation.py  db_test_interuction.py  docker-compose.yaml  models.py  pyproject.toml  settings.py
assets/materials/: database_schema.txt
