[tool.poetry]
name = "database-design"
version = "0.1.0"
description = "Database Design"
authors = ["Diod Dan <danilaprig@gmail.com>"]
license = "MIT"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.6.3"
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"



[tool.isort]
profile = "black"